--- a/index2.html
+++ b/index2.html
@@ -4,14 +4,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="My first MDL webpage" />
+  <meta name="description" content="My second webpage, with MDL" />
   <meta name="keywords" content="mths, icd2o" />
   <meta name="author" content="Mr. Coxall" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/style2.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
-  <link rel="stylesheet" href="./css/style.css" />
-  <title>My first webpage, with proper style</title>
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.purple-green.min.css" />
+  <title>My second webpage, with MDL</title>
 </head>
 
 <body>
@@ -19,11 +19,11 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Material Design Lite Components</span>
+        <span class="mdl-layout-title">More Material Design Lite Components</span>
       </div>
     </header>
     <main class="mdl-layout__content">
-      <div class="page-content">
+      <div class="page-content" style="padding-left: 100px">
         Enter the length of a square.
       </div>
       <!-- Simple Textfield for integers-->
@@ -42,8 +42,9 @@
           Calculate area
         </button>
       </form>
-      <br>
-      <a href="./index2.html">index2.html</a>
+      <p>
+        <a href="./index.html">return</a>
+      </p>
     </main>
   </div>
 </body>
